# esp-powermonitor

./: .gitignore  CMakeLists.txt  README.md  menuconfig.bat  partitions_two_ota_nofact.csv  sdkconfig
components/home_assistant/: CMakeLists.txt  Kconfig  home_assistant.c
components/home_assistant/include/: home_assistant.h  home_assistant_constants.h
main/: CMakeLists.txt  Kconfig  app_main.c  battery.c  config.c  config.h  format.c  led.c  mqtt.c  power_monitor.c  power_monitor.h  upload_script.html  web_server.c  wifi.c
main/includes/: battery.h  config.h  format.h  led.h  mqtt.h  pinmap.h  power_monitor.h  std_includes.h  web_server.h  wifi.h
pcb/ESP32-S2-PowerMeter/: ESP32-S2-PowerMeter-cache.lib  ESP32-S2-PowerMeter.csv  ESP32-S2-PowerMeter.kicad_pcb  ESP32-S2-PowerMeter.kicad_pcb-bak  ESP32-S2-PowerMeter.net  ESP32-S2-PowerMeter.pro  ESP32-S2-PowerMeter.sch  ESP32-S2-PowerMeter.step  ESP32-S2-PowerMeter.xml  fp-info-cache  fp-lib-table  sym-lib-table
pcb/ESP32-S2-PowerMeter/Assembly/: ESP32-S2-PowerMeter-top-pos.csv  jlcpcb-position.csv  kicad_pos_to_cpl.py  overrides.json
pcb/ESP32-S2-PowerMeter/Gerbers/: ESP32-S2-PowerMeter-B_Cu.gbr  ESP32-S2-PowerMeter-B_Mask.gbr  ESP32-S2-PowerMeter-B_Paste.gbr  ESP32-S2-PowerMeter-B_SilkS.gbr  ESP32-S2-PowerMeter-Edge_Cuts.gbr  ESP32-S2-PowerMeter-F_Cu.gbr  ESP32-S2-PowerMeter-F_Mask.gbr  ESP32-S2-PowerMeter-F_Paste.gbr  ESP32-S2-PowerMeter-F_SilkS.gbr  ESP32-S2-PowerMeter-NPTH.drl  ESP32-S2-PowerMeter-PTH.drl  ESP32-S2-PowerMeter-bottom-pos.csv  ESP32-S2-PowerMeter-job.gbrjob  ESP32-S2-PowerMeter-top-pos.csv
(+25 files in other folders)
